<resources>
    <string name="HD">HD</string>
    <string name="SD">SD</string>
    <string name="_13_year_old_terms_use">Are you 13 or older? Let us know! We’ll use your age to serve you the best Viki experience.Other people won’t see it. Read our %1$s for more details.</string>
    <string name="_continue">Continue</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About Viki</string>
    <string name="about_content">"Viki is a global TV site, where millions of people watch their favorite TV shows, movies, as well as curated lifestyle clips and original videos -- translated into 200+ languages by a community of avid fans. Viki’s publishing arm, Soompi, is the leader in online communities for K-pop and K-entertainment. Together, Soompi and Viki deliver fan-driven competitions, original videos and articles, music charts, and exclusive interviews with K-pop celebrities. 

Together, we’re breaking down barriers that stand between great entertainment and its fans, no matter where they are!

https://www.viki.com"</string>
    <string name="about_prefs">about_prefs</string>
    <string name="account">Account</string>
    <string name="action_give_feedback">Give Feedback</string>
    <string name="action_not_now">Not Now</string>
    <string name="action_settings">Settings</string>
    <string name="actionable_card_contactsupport_cta">Contact Viki Support</string>
    <string name="actionable_card_contactsupport_message">Couldn’t find the answer above? Send us your request if you would like to talk to Viki support team.</string>
    <string name="actionable_card_rateus_cta">Rate Us Now</string>
    <string name="actionable_card_rateus_message">Glad that your problems had been solved, it’s our pleasure to serve you and please rate us if you like our service!</string>
    <string name="ad_tag_url" formatted="false">https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&amp;iu=/124319096/external/single_ad_samples&amp;gdfp_req=1&amp;env=vp&amp;output=vast&amp;unviewed_position_start=1&amp;cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&amp;correlator=</string>
    <string name="add_description_for_collection">Add description here...</string>
    <string name="add_note">Add note</string>
    <string name="add_note_here">Add your note here</string>
    <string name="add_shows">Add TV Shows and Movies</string>
    <string name="add_shows_to_your_collection">Add TV shows and movies to your collection</string>
    <string name="add_title_for_collection">e.g., 10 Dramas You Fail to Predict the Ending</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="add_to_watchlist">Add to Watch List</string>
    <string name="added_into_watchList">In Watch List</string>
    <string name="ads">Ads</string>
    <string name="agent_name_fallback">Agent</string>
    <string name="ago">ago</string>
    <string name="airing_on">Airing On</string>
    <string name="aka">a.k.a.</string>
    <string name="all">All</string>
    <string name="all_categories">All Categories</string>
    <string name="all_countries">All Regions</string>
    <string name="all_genres">All Genres</string>
    <string name="all_languages">All Languages</string>
    <string name="all_roles">All Roles</string>
    <string name="all_seasons">All Seasons</string>
    <string name="all_subtitles">All Subtitles</string>
    <string name="and">and</string>
    <string name="app_id">145730428798132</string>
    <string name="app_issues_sdk">App Issues</string>
    <string name="app_issues_sdk_tag">app_issues_sdk</string>
    <string name="app_name">MuxStats</string>
    <string name="app_updates_channel">App updates</string>
    <string name="app_updates_channel_desc">Notification about app updates.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="articles_list_fragment_error_message">Failed to get articles</string>
    <string name="articles_list_fragment_no_articles_found">No articles found</string>
    <string name="ask_request_list_failed_request_message">Message failed</string>
    <string name="attachment_upload_error_retry">Uploading failed, please click to retry</string>
    <string name="attachment_upload_error_short_label">Failed</string>
    <string name="author_name_fallback">Author</string>
    <string name="author_posted_on">%1$s posted on %2$s</string>
    <string name="auto">(auto)</string>
    <string name="available_on">Available on %s</string>
    <string name="awards">Awards</string>
    <string name="belvedere_dialog_camera">Camera</string>
    <string name="belvedere_dialog_gallery">Gallery</string>
    <string name="belvedere_fam_desc_collapse_fam">Collapse Floating Action Menu</string>
    <string name="belvedere_fam_desc_expand_fam">Expand Floating Action Menu</string>
    <string name="belvedere_fam_desc_open_gallery">Import file from gallery</string>
    <string name="belvedere_fam_desc_open_google_photos">Import image from Google Photos</string>
    <string name="belvedere_image_stream_file_too_large">File too large</string>
    <string name="belvedere_image_stream_title">Photo library</string>
    <string name="belvedere_image_stream_unknown_app">@string/request_attachment_generic_unknown_app</string>
    <string name="belvedere_permissions_denied">Permissions denied</string>
    <string name="belvedere_sdk_fpa_suffix_v2">.belvedere2.attachments</string>
    <string name="belvedere_stream_item_camera_tile_desc">Import image from camera</string>
    <string name="belvedere_stream_item_select_file_desc">Select file %s</string>
    <string name="belvedere_stream_item_select_image_desc">Select image %s</string>
    <string name="belvedere_stream_item_unselect_file_desc">Unselect file %s</string>
    <string name="belvedere_stream_item_unselect_image_desc">Unselect image %s</string>
    <string name="belvedere_toolbar_desc_collapse">Close image picker</string>
    <string name="billing_issues_questions_sdk">Billing Issues and/or Questions</string>
    <string name="billing_issues_questions_sdk_key">billing_issues_questions_sdk</string>
    <string name="binge">Binge</string>
    <string name="biography">Biography</string>
    <string name="birth_month">Birth Month</string>
    <string name="category">Category</string>
    <string name="collections">Collections</string>
    <string name="confirmation">Confirm</string>
    <string name="continue_watching_title">Continue Watching</string>
    <string name="description_of_issue">Description of the Issue</string>
    <string name="email">Email Address</string>
    <string name="email_newsletter_prefs">news_letter</string>
    <string name="episode_empty_button">Explore Popular Shows</string>
    <string name="episode_empty_desc">"There’s only one video for this show.
You’ve all caught up!"</string>
    <string name="episode_empty_head">Couldn’t get enough?</string>
    <string name="error_view_cta">Try Again</string>
    <string name="error_view_message">"Sorry, something is wrong.
Please try again later."</string>
    <string name="error_view_title">Whoops :(</string>
    <string name="favorites">Following</string>
    <string name="feedback_submit_button">Submit Feedback</string>
    <string name="general_login_to_app_prefs">login_to_app</string>
    <string name="general_preferred_language_prefs">preferred_language</string>
    <string name="general_user_birthday_prefs">user_birthday</string>
    <string name="intellectual_property">Intellectual Property</string>
    <string name="ip_prefs">ip_prefs</string>
    <string name="keep_me_posted">"Keep me posted on Viki's latest shows, news and more!"</string>
    <string name="log_out">Log Out</string>
    <string name="more_setting">More Settings</string>
    <string name="new_text">New</string>
    <string name="news_letter">Newsletter</string>
    <string name="newsletter_pref_summary">Send me occasional emails about upcoming shows, news, exclusive contests, promos and more! I can unsubscribe at any time.</string>
    <string name="package_name">com.viki.android</string>
    <string name="popular">Popular</string>
    <string name="pref_key_general">key_general</string>
    <string name="pref_key_setting">key_setting</string>
    <string name="pref_report_video_issue">report_video_issue</string>
    <string name="pref_subtitle_look">subtitle_look</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="reviews">Reviews</string>
    <string name="role">Role</string>
    <string name="settings">Settings</string>
    <string name="show_subtitle_prefs">show_subtitle_prefs</string>
    <string name="show_subtitles">Subtitle Display</string>
    <string name="show_timed_comment">Timed Comment Display</string>
    <string name="show_timed_comment_prefs">time_comment_prefs_new</string>
    <string name="spinner_category_label">Issue subject</string>
    <string name="subject">Subject</string>
    <string name="subtitle_language_prefs">subtitle_lang_prefs</string>
    <string name="subtitle_languages">Subtitle Language</string>
    <string name="subtitle_other">Subtitle Size, Font and Color</string>
    <string name="subtitles">Subtitles</string>
    <string name="support">Support</string>
    <string name="term_of_use_prefs">term_of_use_prefs</string>
    <string name="terms_and_privacy">By creating an account, I agree with Viki’s %1$s and %2$s.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="timed_comments">Timed Comments</string>
    <string name="user_birthday">Birthday</string>
    <string name="video_quality_pref">video_quality_prefs</string>
    <string name="video_resolution">Video Resolution</string>
    <string name="video_settings">Video</string>
    <string name="viki_pass">Viki Pass</string>
    <string name="viki_pass_issue_title">Viki Pass - Subscription Issues</string>
    <string name="zendesk_attachment_format">Supports jpg, png, pdf, txt, gif, and mp4 only. The file size cannot exceed 20 MB.</string>
    <string name="zendesk_attachment_label">Attach Files/Screenshots (optional)</string>
</resources>