<?xml version="1.0" encoding="utf-8"?>
<merge android:gravity="center"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextAppearance.Viki.Emphasis.L" android:textColor="@color/contents_primary" android:gravity="center" android:layout_gravity="center" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/keyline_8" android:text="@string/error_view_title" />
    <TextView android:textAppearance="@style/TextAppearance.Viki.Plain.M" android:textColor="@color/contents_primary" android:gravity="center" android:layout_gravity="center" android:id="@id/tvMessage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/keyline_8" android:text="@string/error_view_message" />
    <Button android:layout_gravity="center" android:id="@id/tvCta" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/error_view_cta" style="@style/VikiTheme.Button.TextButton" />
</merge>