<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/container_watch_history" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <TextView android:text="@string/continue_watching_title" android:drawableStart="@drawable/watch_history" style="@style/ProfileItem" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/container_collections" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <TextView android:text="@string/collections" android:drawableStart="@drawable/collections" style="@style/ProfileItem" />
        <TextView android:textAppearance="@style/VikiTheme.TextAppearance.Body" android:textColor="@color/contents_tertiary" android:id="@id/textview_collections_number" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/container_reviews" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <TextView android:text="@string/reviews" android:drawableStart="@drawable/reviews" style="@style/ProfileItem" />
        <TextView android:textAppearance="@style/VikiTheme.TextAppearance.Body" android:textColor="@color/contents_tertiary" android:id="@id/textview_reviews_number" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/container_following" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <TextView android:text="@string/favorites" android:drawableStart="@drawable/following" style="@style/ProfileItem" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/container_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <TextView android:text="@string/settings" android:drawableStart="@drawable/setting_white" style="@style/ProfileItem" />
    </RelativeLayout>
</LinearLayout>